# backend/docs/swagger.json
@@ -584,6 +584,9 @@
                 "jobtitle": {
                     "type": "integer"
                 },
+                "personalDob": {
+                    "type": "string"
+                },
                 "personalMail": {
                     "type": "string"
                 },
@@ -677,6 +680,10 @@
             "properties": {
                 "Added": {
                     "description": "Added holds the value of the \"Added\" field.",
+                    "type": "string"
+                },
+                "PersonalDob": {
+                    "description": "PersonalDob holds the value of the \"PersonalDob\" field.",
                     "type": "string"
                 },
                 "PersonalMail": {
